--- a/_posts/2016-06-23-提高页面的渲染性能.markdown
+++ b/_posts/2016-06-23-提高页面的渲染性能.markdown
@@ -12,10 +12,12 @@ TL;DR
 ## 为什么聊这个话题
 
 几天前，开始陆续收到用户反馈，有的页面无端卡死，就像下面这样：
+<iframe src="https://player.vimeo.com/video/183071282" width="640" height="1138" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+
 
 作为一名熟练的调试工程师，出了问题肯定马上开始调试，用起了达尔文的控制变量法找问题的出处。由于这是一个问卷，我第一反应就是某种题型导致了内存溢出，虽然在前端里内存溢出是比较少见的（V8自动回收内存）。
 
-在UR里加入了不同类型的上百道题目后发现找不出问题起源，并没有引发到原本必现的crash。
+在[http://wj.qq.com](http://wj.qq.com)里加入了不同类型的上百道题目后发现找不出问题起源，并没有引发到原本必现的crash。
 
 ## 当我们在谈论性能时，我们在谈论什么？
 ### 网络性能
@@ -64,14 +66,11 @@ TL;DR
 如果你在动画里面使用了上述某些属性，导致重绘，这个元素所属的图层会被重新上传到 GPU 。 在移动设备上这是一个很昂贵耗资源的操作，因为移动设备的CPU明显不如你的电脑，这意味着绘制的工作会需要更长的时间； 而上传给 CPU 和 GPU 的带宽并非没有限制，所以重新绘制的纹理上传就自然需要更长的时间。
 
 
-
-
-
 ##### 插入一点小实例
 
 以下为 `margin` 变化时页面的执行数据：
 
-![](media/14700408894152.jpg)
+![](media/2016-06-23/14700408894152.jpg)
 
 
 我们可以看到页面在每一次动画执行的时候经历了 - 
@@ -82,11 +81,9 @@ TL;DR
 `Paint` --- 绘制
 `composite layers` --- 组合层
 
-
-
 以下是一个 `color` 改变的动画：
 
-![](media/14700395692709.jpg)
+![](media/2016-06-23/14700395692709.jpg)
 
 可以看到这个流程相对于上述比较简单了一些，没有调用 `layout`
 
@@ -97,7 +94,7 @@ TL;DR
 
 
 以下为 `transform` 变化时页面的执行数据：
-![](media/14700319383770.jpg)
+![](media/2016-06-23/14700319383770.jpg)
 
 
 我们可以看到主线程的工作已经交给 GPU 来优化，而主线程几乎不占工作。
@@ -119,9 +116,7 @@ TL;DR
 
 ##### 不要使用setTimeout/setInterval，使用 requestAnimationFrame 
 
-1 . raf能减少无意义的循环，
 
-![](media/14694392498843.jpg)
 
 
 ##### DOM元素的插入方式
@@ -150,9 +145,9 @@ $(targetEl).append(tempEl);
 ##### 检查repaint层是否合理
 
 
-![](media/14693400037481.jpg)
+![](media/2016-06-23/14693400037481.jpg)
 
-![](media/14693401941493.jpg)
+![](media/2016-06-23/14693401941493.jpg)
 >
 Javascript : 通常意义上来说Javascript用于可见的更改，无论是 jQuery 的 animation 函数， 排列一个数组集合，或者是在页面上增加一个DOM。 尽管可见的变化不一定是由 Javascript 触发，比如 CSS Animation, Transition 和 web animation API 都被广泛应用于页面变化。
 样式计算 : 这个过程会基于选择器来计算CSS规则应该应用在哪些元素上，比如 `.headline` 或者 `.nav > .nav__item`. 一旦一个规则被声明之后，就会马上被应用每个对应的元素，然后开始进行计算。 
@@ -223,13 +218,7 @@ ele.addClass("abc");
 
 ele.classname = "normalClassName abc";
 
-
 ```
-
-
-
-
-
 
 
 ##### `animation` 和 `transition` 的区别
@@ -245,12 +234,13 @@ ele.classname = "normalClassName abc";
 
 ##### 浏览器渲染机制
 
-![](media/14693342774510.jpg)
+![](media/2016-06-23/14693342774510.jpg)
 > photo by webkit team
 
 
 如果要讲渲染性能，上面这幅图几乎是所有实验和优化的参照模型。
 
+![14695857351291](media/14695857351291.jpg)
 
 
 因为我们常用的是webkit(Blink)系浏览器，调试工具也是以chrome为基础，所以以下过程以chrome作为分析原型， IE 和 Firefox 的具体渲染过程会有一些细节差异。
@@ -286,7 +276,7 @@ ele.classname = "normalClassName abc";
     
     1. 组合层(composite layers)
     浏览器会将页面的每一部分暗自绘制到各个对应的层，然后将这些层叠合起来，这样浏览器才能正确渲染出我们想要的图像。这一步叠合层的操作，就叫做 `compositing` 。
-    ![](media/14695219839859.jpg)           
+    ![](media/2016-06-23/14695219839859.jpg)           
     2. 绘制(Paint Setup/Paint(size x size)) 
 
 
@@ -381,7 +371,7 @@ background-size: cover; 可以改善
 
 
 打开你的页面，登录你的开发者工具然后转到Timeline面板。 点击记录按钮，然后开始正常使用你的页面，让程序记录下来这些操作。
-![](media/14695852136686.jpg)
+![](media/2016-06-23/14695852136686.jpg)
 
 
 检查`Timeline`中每一帧的渲染预算是否低于我们预期的 60fps。 如果结果这个检查结果非常靠近临界线，那么在移动端很可能就会超越这条临界线。
@@ -398,7 +388,7 @@ background-size: cover; 可以改善
 ### 案例改良过程
 改良前的加载曲线：
 
-![](media/14694291111227.jpg)
+![](media/2016-06-23/14694291111227.jpg)
 
 
 占用内存： 4.2m - 10.0m
@@ -412,7 +402,7 @@ FPS ： 跳帧几次
 而去除一系列必须无法动的逻辑之外，我们能优化的上限是：
 
 
-![](media/14694299002149.jpg)
+![](media/2016-06-23/14694299002149.jpg)
 
 稳定在 1600ms+-100ms 渲染绘制总共保持在 50ms+-20ms  
 
@@ -421,7 +411,7 @@ FPS ： 跳帧几次
 
 改良前的滚动曲线：
 
-![](media/14694287558674.jpg)
+![](media/2016-06-23/14694287558674.jpg)
 
 
 几乎所有工作都集中在再次渲染上，滚动FPS超60次数非常多，明显有卡滞的感觉。
